laborations/lab2/testsuite/good/redeclare-in-if.cc
int main () {
  bool x0 = true ;
  if (0 < 0 - 0) int x0 = 0 ;
  else int x0 = 0 ;
  printInt(0);
  return 0 ;
}
