laborations/lab2/testsuite/bad/arith_if_bool_min_bool.cc
int main () {
  if (false - true)
	int x = 45;
  else { }
  return 0;
}
